--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -12,10 +12,13 @@ import imgHashiRamen from "../assets/img/screenshot-hr.png";
 import imgNikolaTesla from "../assets/img/img-nikola-tesla.webp";
 import imgLocOsLinux from "../assets/img/screenshot-lpl.png";
 import imgCloneSpotify from "../assets/img/screenshot-sp.png";
+import imgSafeBox from "../assets/img/screenshot-sb.png";
 import AstroIcon from "./icons/AstroIcon.astro";
 import React from "./icons/React.astro";
 import Tailwind from "./icons/Tailwind.astro";
 import Html from "./icons/Html.astro";
+import SQLiteIcon from "./icons/SQLite.astro";
+import ElectronIcon from "./icons/Electron.astro";
 import Css from "./icons/Css.astro";
 import Js from "./icons/Js.astro";
 import JsLogo from "./logos/Js.astro";
@@ -23,6 +26,8 @@ import Link from "./icons/Link.astro";
 import AstroLogo from "./logos/AstroLogo.astro";
 import Java from "./logos/Java.astro";
 import MySql from "./logos/MySql.astro";
+import SQLite from "./logos/SQLite.astro";
+import Electron from "./logos/Electron.astro";
 import Php from "./logos/Php.astro";
 import ReactLogo from "./logos/React.astro";
 import TailwindLogo from "./logos/Tailwind.astro";
@@ -68,25 +73,69 @@ import Linux from "./logos/Linux.astro";
           </a>
         </div>
       </div>
-
-      <!-- Frase -->
-      <div class="h-auto py-10 pb-14 md:py-0 md:pb-20 max-w-[700px] flex flex-col items-center justify-center md:items-center md:flex-row gap-6">
-        <blockquote class="dark:text-neutral-100 text-base md:text-lg">
-          <p class="italic max-w-[500px]">
-            "El desarrollo progresivo del hombre depende vitalmente de las
-            invenciones. Son el resultado más importante del cerebro creativo".
-            <!-- "La creatividad es inteligencia divirtiéndose." -->
-          </p>
-          <small class="block mt-4 text-base text-right text-neutral-800 dark:text-neutral-200">- Nikola Tesla.</small>
-        </blockquote>
-        <img src={imgNikolaTesla.src} class="max-w-[100%] w-[300px]" alt="Imagen de Nikola Tesla">
-      </div>
     </section>
 
     <Section id="proyectos" title="Proyectos">
       <Code className="size-8" slot="icon" />
       <div>
-        <article class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start">
+        <!-- SafeBox -->
+        <article
+          class="flex flex-col md:flex-row gap-3 md:gap-8 items-start mb-16"
+        >
+          <img
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-400 dark:border-neutral-600"
+            src={imgSafeBox.src}
+            alt="Imagen de la app web del clon de spotify"
+            loading="lazy"
+          />
+          <div>
+            <h3
+              class="text-2xl md:text-3xl font-medium mb-2 text-green-500 dark:text-green-300"
+            >
+              SafeBox - Desktop App
+            </h3>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">
+              Febrero 2025
+            </h4>
+            <div class="flex gap-4 mb-4">
+              <span><React className="size-6" /></span>
+              <span><Tailwind className="size-6" /></span>
+              <span><ElectronIcon className="size-6" /> </span>
+              <span><SQLiteIcon className="size-6" /></span>
+            </div>
+            <p class="mb-6">
+              SafeBox es un gestor de contraseñas local, diseñado para ser
+              seguro y fácil de usar, con una interfaz gráfica sencilla. Ideal
+              para áreas de trabajo donde no se requiere tener contraseñas en la
+              nube. Tecnologías utlizadas: Electron, React, Tailwind CSS y
+              SQLite 3.
+            </p>
+            <div class="flex gap-2">
+              <a
+                href="https://github.com/adriantaf/safe-box/releases"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-green-600 text-green-700 hover:bg-green-600 dark:border-green-400 hover:text-slate-50 dark:text-green-400 font-medium py-1 px-4 dark:hover:bg-green-400 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
+              >
+                <Link className="size-5" />
+                Descargas
+              </a>
+              <a
+                href="https://github.com/adriantaf/safe-box/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="border-2 border-gray-500 text-gray-600 hover:bg-gray-500 hover:text-slate-50 dark:border-gray-300 dark:text-gray-300 font-medium py-1 px-4 dark:hover:bg-gray-300 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
+              >
+                Código
+              </a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Clon Spotify -->
+        <article
+          class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start"
+        >
           <img
             class="w-full md:w-1/2 h-auto border-2 border-neutral-400 dark:border-neutral-600"
             src={imgCloneSpotify.src}
@@ -94,10 +143,14 @@ import Linux from "./logos/Linux.astro";
             loading="lazy"
           />
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-green-500 dark:text-green-300">
+            <h3
+              class="text-2xl md:text-3xl font-medium mb-2 text-green-500 dark:text-green-300"
+            >
               Spotify clon - Web App
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">Diciembre 2024</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">
+              Diciembre 2024
+            </h4>
             <div class="flex gap-4 mb-4">
               <span><React className="size-6" /></span>
             </div>
@@ -140,10 +193,14 @@ import Linux from "./logos/Linux.astro";
             alt="Imagen del sitio web del restaurante hashi ramen pho"
           />
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300">
+            <h3
+              class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300"
+            >
               Hashi Ramen & Pho - Sitio Web
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">Septiembre 2024</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">
+              Septiembre 2024
+            </h4>
             <div class="flex gap-4 mb-4">
               <span><AstroIcon className="size-6" /> </span>
               <span><React className="size-6" /></span>
@@ -156,14 +213,18 @@ import Linux from "./logos/Linux.astro";
             </p>
             <ul class="mb-6 space-y-2">
               <li class="flex items-start gap-2">
-                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check
+                  className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5"
+                />
                 <span
                   >Implementación de colores contrastantes para un diseño
                   moderno.</span
                 >
               </li>
               <li class="flex items-start gap-2">
-                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check
+                  className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5"
+                />
                 <span>Optimización para dispositivos móviles.</span>
               </li>
             </ul>
@@ -190,10 +251,14 @@ import Linux from "./logos/Linux.astro";
           />
 
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300">
+            <h3
+              class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300"
+            >
               Loc-OS Linux - Diseño Web
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">2021</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">
+              2021
+            </h4>
             <div class="flex gap-4 mb-4">
               <span><Html className="size-5" /> </span>
               <span><Css className="size-5" /></span>
@@ -208,14 +273,18 @@ import Linux from "./logos/Linux.astro";
             </p>
             <ul class="mb-6 space-y-2">
               <li class="flex items-start gap-2">
-                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check
+                  className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5"
+                />
                 <span
                   >Implementación de colores contrastantes para un tema oscuro
                   moderno.</span
                 >
               </li>
               <li class="flex items-start gap-2">
-                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check
+                  className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5"
+                />
                 <span>Optimización para dispositivos móviles.</span>
               </li>
             </ul>
@@ -247,7 +316,11 @@ import Linux from "./logos/Linux.astro";
 
       <div class="flex flex-wrap gap-8 sm:gap-14 sm:flex-row">
         <div>
-          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Front-end</h3>
+          <h3
+            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
+          >
+            Front-end
+          </h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
@@ -282,7 +355,11 @@ import Linux from "./logos/Linux.astro";
           </div>
         </div>
         <div>
-          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Back-end</h3>
+          <h3
+            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
+          >
+            Back-end
+          </h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
@@ -301,15 +378,16 @@ import Linux from "./logos/Linux.astro";
           </div>
         </div>
         <div>
-          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Otros</h3>
+          <h3
+            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
+          >
+            Otros
+          </h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer className="max-w-[50%]">
               <SkillItem>
                 <Cpp className="size-8 max-h-full max-w-full aspect-square" />
               </SkillItem>
-              <!-- <p class="text-sm text-neutral-200 text-center">
-                Programación estructurada
-              </p> -->
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
@@ -318,16 +396,28 @@ import Linux from "./logos/Linux.astro";
                   className="size-8 max-h-full max-w-full aspect-square"
                 />
               </SkillItem>
-              <!-- <p class="text-sm text-neutral-200 text-center">Desktop</p> -->
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
               <SkillItem>
                 <Java className="size-8 max-h-full max-w-full aspect-square" />
               </SkillItem>
-              <!-- <p class="text-sm text-neutral-200 text-center">
-                POO, Desktop & CRUD con MySQL
-              </p> -->
+            </SkillContainer>
+
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <Electron
+                  className="size-8 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
+            </SkillContainer>
+
+            <SkillContainer className="max-w-[50%]">
+              <SkillItem>
+                <SQLite
+                  className="size-14 max-h-full max-w-full aspect-square"
+                />
+              </SkillItem>
             </SkillContainer>
 
             <SkillContainer className="max-w-[50%]">
@@ -343,12 +433,15 @@ import Linux from "./logos/Linux.astro";
       <Brain className="size-8" slot="icon" />
       <div>
         <ul class="space-y-2 list-[square] marker:text-red-500 pl-4">
-          <li><strong>Programación estructurada</strong> con C++</li>
-          <li><strong>Desktop</strong> C#, MySQL & JAVA</li>
-          <li><strong>POO</strong> en Java</li>
-          <li>Uso doméstico y de terminal de sistemas operativos basados en <strong>Linux</strong> [2020 - 2024]</li>
-          <li><strong>Front-end</strong> basado en React y Astro</li>
-          <li><strong>Back-end</strong> con PHP y MySQL (básico por ahora)</li>
+          <li><strong>Programación estructurada</strong>: C++</li>
+          <li><strong>Desktop</strong>: ElectronJS y Java</li>
+          <li><strong>POO</strong>: Java</li>
+          <li>
+            <strong>Linux</strong>: Uso doméstico y de terminal de distribuciones de Linux [2020 - 2024]
+          </li>
+          <li><strong>Front-end</strong> basado en React y AstroJS</li>
+          <li><strong>Back-end</strong> con Node</li>
+          <li><strong>Base de datos</strong> MySQL y SQLite</li>
         </ul>
       </div>
     </Section>
@@ -359,19 +452,31 @@ import Linux from "./logos/Linux.astro";
           <h3 class="text-lg md:text-2xl font-medium mb-2">
             Ingeniería en Sistemas Computacionales
           </h3>
-          <p class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg">
+          <p
+            class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg"
+          >
             Instituto Tecnológico de Ensenada (ITE)
           </p>
-          <p class="text-sm text-neutral-700 dark:text-neutral-300">Agosto 2023 - En curso</p>
+          <p class="text-sm text-neutral-700 dark:text-neutral-300">
+            Agosto 2023 - En curso
+          </p>
         </div>
         <div class="border-l-4 border-purple-500 pl-6">
-          <h3 class="text-lg md:text-2xl font-medium mb-2">Técnico en Programación</h3>
-          <p class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg">CBTIS 41</p>
-          <p class="text-sm text-neutral-700 dark:text-neutral-300">Agosto 2019 - Julio 2023</p>
+          <h3 class="text-lg md:text-2xl font-medium mb-2">
+            Técnico en Programación
+          </h3>
+          <p
+            class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg"
+          >
+            CBTIS 41
+          </p>
+          <p class="text-sm text-neutral-700 dark:text-neutral-300">
+            Agosto 2019 - Julio 2023
+          </p>
         </div>
       </div>
     </Section>
-    <Section id="sobre-mi" title="Sobre mí">
+    <Section id="sobre-mi" title="Sobre mí" className="mb-0">
       <User className="size-8" slot="icon" />
       <div>
         <p>
@@ -390,10 +495,35 @@ import Linux from "./logos/Linux.astro";
           esta rama.
         </p>
       </div>
+
+      <!-- Frase -->
+      <div class="flex justify-center">
+        <div
+          class="h-auto py-10 md:mt-10 md:py-0 max-w-[700px] flex flex-col-reverse items-center justify-center md:items-center md:flex-row gap-6"
+        >
+          <blockquote class="dark:text-neutral-100 text-base md:text-lg">
+            <p class="italic max-w-[500px] text-sm">
+              "El desarrollo progresivo del hombre depende vitalmente de las
+              invenciones. Son el resultado más importante del cerebro
+              creativo".
+              <!-- "La creatividad es inteligencia divirtiéndose." -->
+            </p>
+            <small
+              class="block mt-4 text-sm text-right text-neutral-800 dark:text-neutral-200"
+              >- Nikola Tesla.</small
+            >
+          </blockquote>
+          <img
+            src={imgNikolaTesla.src}
+            class="max-w-[100%] w-[200px] sm:w-[230px]"
+            alt="Imagen de Nikola Tesla"
+          />
+        </div>
+      </div>
     </Section>
     <footer class="w-full flex justify-center px-5">
       <div class="container py-12 text-right">
-        <small>Desarrollado con Astro.</small>
+        <small>Desarrollado con Astro y Vanilla JS.</small>
       </div>
     </footer>
   </div>
