--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -311,137 +311,20 @@ import Linux from "./logos/Linux.astro";
         </article>
       </div>
     </Section>
-    <Section id="tecnologias" title="Tecnologías">
-      <Dev className="size-8" slot="icon" />
-
-      <div class="flex flex-wrap gap-8 sm:gap-14 sm:flex-row">
-        <div>
-          <h3
-            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
-          >
-            Front-end
-          </h3>
-          <div class="w-full flex flex-wrap gap-5">
-            <SkillContainer>
-              <SkillItem>
-                <JsLogo
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer>
-              <SkillItem>
-                <TailwindLogo
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-            <SkillContainer>
-              <SkillItem>
-                <ReactLogo
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer>
-              <SkillItem>
-                <AstroLogo
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-          </div>
-        </div>
-        <div>
-          <h3
-            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
-          >
-            Back-end
-          </h3>
-          <div class="w-full flex flex-wrap gap-5">
-            <SkillContainer>
-              <SkillItem>
-                <MySql className="size-8 max-h-full max-w-full aspect-square" />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="col-span-1">
-              <SkillItem>
-                <Php className="size-8 max-h-full max-w-full aspect-square" />
-              </SkillItem>
-              <!-- <p class="text-sm text-neutral-200 text-center">
-                POO & CRUD con MySQL
-              </p> -->
-            </SkillContainer>
-          </div>
-        </div>
-        <div>
-          <h3
-            class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4"
-          >
-            Otros
-          </h3>
-          <div class="w-full flex flex-wrap gap-5">
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <Cpp className="size-8 max-h-full max-w-full aspect-square" />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <Csharp
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <Java className="size-8 max-h-full max-w-full aspect-square" />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <Electron
-                  className="size-8 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <SQLite
-                  className="size-14 max-h-full max-w-full aspect-square"
-                />
-              </SkillItem>
-            </SkillContainer>
-
-            <SkillContainer className="max-w-[50%]">
-              <SkillItem>
-                <Linux className="size-8 max-h-full max-w-full aspect-square" />
-              </SkillItem>
-            </SkillContainer>
-          </div>
-        </div>
-      </div>
-    </Section>
     <Section id="habilidades" title="Habilidades">
       <Brain className="size-8" slot="icon" />
       <div>
         <ul class="space-y-2 list-[square] marker:text-red-500 pl-4">
           <li><strong>Programación estructurada</strong>: C++</li>
-          <li><strong>Desktop</strong>: ElectronJS y Java</li>
           <li><strong>POO</strong>: Java</li>
+          <li><strong>Desktop</strong>: ElectronJS and Java</li>
+          <li><strong>Movil Apps (Android)</strong>: Flutter</li>
           <li>
             <strong>Linux</strong>: Uso doméstico y de terminal de distribuciones de Linux [2020 - 2024]
           </li>
-          <li><strong>Front-end</strong> basado en React y AstroJS</li>
-          <li><strong>Back-end</strong> con Node</li>
-          <li><strong>Base de datos</strong> MySQL y SQLite</li>
+          <li><strong>Front-end</strong>: Javascript, React, Astro y Tailwind</li>
+          <li><strong>Back-end</strong>: NodeJS & Express</li>
+          <li><strong>Data Base</strong> MySQL, SQLite and PostgreSQL</li>
         </ul>
       </div>
     </Section>
@@ -458,7 +341,7 @@ import Linux from "./logos/Linux.astro";
             Instituto Tecnológico de Ensenada (ITE)
           </p>
           <p class="text-sm text-neutral-700 dark:text-neutral-300">
-            Agosto 2023 - En curso
+            Agosto 2023 - Septiembre 2024
           </p>
         </div>
         <div class="border-l-4 border-purple-500 pl-6">
@@ -468,7 +351,7 @@ import Linux from "./logos/Linux.astro";
           <p
             class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg"
           >
-            CBTIS 41
+            CBTIS No. 41
           </p>
           <p class="text-sm text-neutral-700 dark:text-neutral-300">
             Agosto 2019 - Julio 2023
@@ -497,7 +380,7 @@ import Linux from "./logos/Linux.astro";
       </div>
 
       <!-- Frase -->
-      <div class="flex justify-center">
+      <!-- <div class="flex justify-center">
         <div
           class="h-auto py-10 md:mt-10 md:py-0 max-w-[700px] flex flex-col-reverse items-center justify-center md:items-center md:flex-row gap-6"
         >
@@ -506,7 +389,7 @@ import Linux from "./logos/Linux.astro";
               "El desarrollo progresivo del hombre depende vitalmente de las
               invenciones. Son el resultado más importante del cerebro
               creativo".
-              <!-- "La creatividad es inteligencia divirtiéndose." -->
+              "La creatividad es inteligencia divirtiéndose."
             </p>
             <small
               class="block mt-4 text-sm text-right text-neutral-800 dark:text-neutral-200"
@@ -519,7 +402,7 @@ import Linux from "./logos/Linux.astro";
             alt="Imagen de Nikola Tesla"
           />
         </div>
-      </div>
+      </div> -->
     </Section>
     <footer class="w-full flex justify-center px-5">
       <div class="container py-12 text-right">
